# ros2_ws

src/: README_3.md
src/cpp_launch_example/: CMakeLists.txt
src/cpp_launch_example/launch/: turtlesim_mimic_b_launch.py
src/cpp_launch_example/src/: twist_publisher.cpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: listener.cpp  publisher_script.cpp  topics_practice.cpp  topics_practice_b.cpp
src/cpp_srvcli/: CMakeLists.txt
src/cpp_srvcli/src/: add_two_ints_server_1.cpp  client_subcription_node.cpp  service_practice.cpp  service_practice_b.cpp
src/more_interfaces/: CMakeLists.txt
src/py_launch_example/: package.xml  setup.py
src/py_launch_example/launch/: turtlesim_mimic_launch.py
src/py_launch_example/py_launch_example/: twist_publisher.py
src/py_pubsub/: setup.py
src/py_pubsub/py_pubsub/: listener.py  publisher_script.py  topics_practice.py  topics_practice_b.py
src/py_srvcli/: setup.py
src/py_srvcli/py_srvcli/: client_node.py  client_subcription_node.py  service_node.py  service_practice.py  service_practice_b.py
src/testing_interfaces_cpp/: CMakeLists.txt
src/testing_interfaces_python/: setup.py
src/testing_interfaces_python/testing_interfaces_python/: add_client_node.py  add_client_node_1.py
src/tutorial_interfaces/: CMakeLists.txt
